
- The HyperSearch feature no longer blocks the GUI while listing a
  directory (which could take some time).

- New 'broken image' icon shown in place of tool bar buttons whose icons
  cannot be located.

- Improved popup menu positioning code.

- jEdit.get{Integer,Double}Property and Buffer.getIntegerProperty() no
  longer barf if the property contains leading or trailing whitespace.

+ Bug Fixes:

- Fixed default install path settings in installer when running on Unix.
  Now, instead of checking for a user name of "root", it checks if the
  appropriate subdirectories of /usr/local are writable.

- When evaluating BeanShell expressions, the standard
  view/buffer/editPane/textArea variables would not be unset when the
  expression finishes executing.

- The text area did not get initial focus if there is a window docked
  in the left or top part of the view, and the 'tip of the day' was
  switched on.

- Removed debugging messages from PanelWindowContainer.java.

- Fixed bottom tool bar layout problem.

- Image shown in 'welcome to jEdit' page in help was not being installed
  by the installer.

- Fixed a bug in the folding code that could be triggered by switching
  to indent fold mode, collapsing some folds, switching to explicit fold
  mode, then switching back to indent fold mode again.

- The view's minimum size was rather large, this caused problems while
  trying to resize it if the option to decorate window borders using the
  Swing L&F was enabled.

- 'Expand Fold Fully' command didn't work.

- The 'gutter bracket highlight' setting in the Color option pane didn't
  work.

+ API Changes:

- It is no longer necessary to define labels for dockable window
  -toggle actions. The label is now automatically created by appending
  "(Toggle)" to the non-toggle action's label.

- Old-style dockable window API no longer supported; the following
  symbols have been removed:

  EditBus.addToNamedList() method
  EditBus.removeFromNamedList() method