@@ -57,6 +57,10 @@ implements ActionListener, ListSelectionListener, MouseListener
 			{
 				StringBuffer buf = new StringBuffer();
 				String item = clipHistory.getItem(index);
+				// workaround for Swing rendering labels starting
+				// with <html> using the HTML engine
+				if(item.toLowerCase().startsWith("<html>"))
+					buf.append(' ');
 				boolean ws = true;
 				for(int i = 0; i < item.length(); i++)
 				{
@@ -168,7 +172,8 @@ implements ActionListener, ListSelectionListener, MouseListener
 	public void mouseEntered(MouseEvent evt) {}
 	public void mouseExited(MouseEvent evt) {}
 	public void mousePressed(MouseEvent evt) {}
-	public void mouseReleased(MouseEvent evt) {} //}}}
+	public void mouseReleased(MouseEvent evt) {}
+	//}}}
 
 	//{{{ valueChanged() method
 	public void valueChanged(ListSelectionEvent evt)
